--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -181,8 +181,13 @@ footer .footer-wrapper #footerbox.active ul { display: block; }
 .main-acoount-tabs .grab-the-offer-box { background-color: rgb(255, 255, 255); border: 1px solid rgb(229, 229, 229); padding: 30px 20px; height: 100%; }
 .main-acoount-tabs .grab-the-offer-box .back-img { background: rgb(219, 219, 219); position: relative; height: 262px; }
 .main-acoount-tabs .grab-the-offer-box .box-info { margin-bottom:24px; }
-.main-acoount-tabs .grab-the-offer-box .back-img .unlimited { position: absolute; top: 15px; left: 19px; background: rgb(18, 40, 76); width: 106px; height: 33px; display: flex; justify-content: center; align-items: center; }
-.main-acoount-tabs .grab-the-offer-box .back-img .unlimited span { font-size: 12px; letter-spacing: 0.6px; color: rgb(255, 255, 255); text-transform: uppercase; }
+.main-acoount-tabs .grab-the-offer-box .product-box .unlimited { position: absolute; top: 15px; left: 19px; background: rgb(18, 40, 76); width: 106px; height: 33px; display: flex; justify-content: center; align-items: center; }
+.main-acoount-tabs .grab-the-offer-box .product-box .unlimited span { font-size: 12px; letter-spacing: 0.6px; color: rgb(255, 255, 255); text-transform: uppercase; }
+.main-acoount-tabs .grab-the-offer-box .image-wrapper {position: relative;margin: 0 0 8px;}
+.main-acoount-tabs .grab-the-offer-box .image-wrapper a.image { display: block; position: relative; overflow: hidden; }
+.main-acoount-tabs .grab-the-offer-box .image-wrapper a.image::after { content: ""; display: block; padding-bottom: 60%; }
+.main-acoount-tabs .grab-the-offer-box .row .col-lg-4{padding-left: 8px;padding-right: 8px;}
+.main-acoount-tabs .grab-the-offer-box .image-wrapper a.image img { min-width: 100%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); border-radius: 4px; }
 .main-acoount-tabs .grab-the-offer-box .details .meta h3 { margin-bottom:0;margin-top: 16px; font-size: 20px; color: rgb(34, 34, 34); line-height: 30px; font-weight: bold; }
 .main-acoount-tabs .grab-the-offer-box .details .meta p { margin-top: 6px; font-size: 15px; color: rgb(130, 132, 132); line-height: 23px; letter-spacing: 0.19px; }
 .main-acoount-tabs .grab-the-offer-box .details .meta span { font-size: 14px; color: rgb(18, 40, 76); }
@@ -373,6 +378,7 @@ footer .footer-wrapper #footerbox.active ul { display: block; }
 .checkout-wrapper-main .checkout-wrapper-grid .sign-in-form-content .form-group { margin-top: 24px; }
 .checkout-wrapper-main .checkout-wrapper-grid .sign-in-form-content .login-button a { margin-top: 24px; background-color: rgb(18, 40, 76); width: 100%; display: block; letter-spacing: 1.12px; color: rgb(255, 255, 255); font-weight: 600; font-size: 14px; height: 48px; line-height: 48px; text-align: center; border-radius: 30px; }
 .checkout-wrapper-main .checkout-wrapper-grid .sign-in-form-content .forgot-pass a { margin-top: 24px; border: 2px solid rgb(229, 229, 229); width: 100%; display: block; letter-spacing: 1.12px; color: rgb(0, 0, 0); font-weight: 600; font-size: 14px; height: 48px; line-height: 48px; text-align: center; border-radius: 30px; }
+.checkout-wrapper-main .checkout-wrapper-grid .checkout-address-box .date-select{padding:0 10px;width: 100%;font-size: 14px;max-width: 350px;height: 50px;border: 1px solid rgb(226, 226, 226);border-radius: 4px;color: #a7a7a7;}
 .checkout-wrapper-main .checkout-wrapper-grid .checkout-address-box { background-color: rgb(255, 255, 255); padding: 40px; margin-top: 20px;}
 .checkout-wrapper-main .checkout-wrapper-grid .checkout-address-box .tophead h2 { color: rgb(18, 40, 76); font-weight: bold; font-size: 18px; margin: 0px 0px 15px; }
 .checkout-wrapper-main .checkout-wrapper-grid .checkout-address-box .flex-area { display: flex; margin-top: 22px; }
@@ -551,6 +557,7 @@ footer .footer-wrapper #footerbox.active ul { display: block; }
 .change-popup .button-address .btn{margin-top: 10px;width: 430px;height: 59px;background-color: #12284C;font-size: 16px;font-weight: 500;border-radius: 50px;color: white;}
 .change-popup .change-popup-wrapper{max-width: 619px;width:100%; max-height: calc(100% + 2px); overflow: hidden auto; overscroll-behavior: contain; background: rgb(255, 255, 255); position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); z-index: 1;}
 .change-popup .back-overlay{height: 100vh;background-color: rgba(0, 0, 0, 0.5);width: 100%;position: fixed;top: 0;right: 0;bottom: 0;left: 0;display: none;z-index: 11;}
+.change-popup .close-popup button{font-size: 0;border: 0;height: 40px;width: 40px;background: url(../images/popup-close.svg) #2e3333;background-position: center center;background-size: 36px;border-radius: 50%;position: absolute;top: -10px;right: -10px;outline: 0;}
 #change-popup.active .back-overlay{display: block;}
 #change-popup.active .change-popup-wrapper{transition: all 0.3s ease-in-out 0s; transform: translate(-50%, -50%) scale(1);z-index: 999;}
 
@@ -559,9 +566,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border-radius: 4px;
   margin-right: 2px;
   opacity: 0.6;
-  filter: invert(0.8);
+  filter: invert(0.12);
+  color: blue;
 }
-
 
 
 
@@ -904,6 +911,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .change-popup .change-popup-header h2 {font-size: 16px;}
   .change-popup .address p {font-size: 16px;}
   .change-popup .button-address .btn {margin-top: 10px;width: 100%;display: block;height: 48px;line-height: 38px;font-size: 14px;}
+
+  .checkout-wrapper-main .checkout-wrapper-grid .checkout-address-box .date-select{height: 40px;}
 
 }
 
