--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -481,7 +481,7 @@ footer .footer-wrapper #footerbox.active ul { display: block; }
 /* POPUP */
 .custom-modal-wrapper {display:none; opacity:0; visibility: hidden; background: rgba(0,0,0,.5);position: fixed;width: 100vw;height: 100vh;top: 0;left: 0;z-index: 99;display: flex;align-items: center;justify-content: center;}
 .custom-modal-wrapper.active {display:flex; opacity:1; visibility: visible;}
-.custom-modal-wrapper .custom-modal {background: #fff;border-radius: 3px;width: 100%;max-width: 620px;margin:0 15px;max-height: 92vh;height: auto;display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-webkit-flex-direction: column;-ms-flex-direction: column;flex-direction: column;position: relative;opacity: 0;-webkit-transform: scale3d(.9,.9,1);transform: scale3d(.9,.9,1);-webkit-transition: opacity .3s ease,-webkit-transform .3s ease;transition: opacity .3s ease,-webkit-transform .3s ease;transition: transform .3s ease,opacity .3s ease;transition: transform .3s ease,opacity .3s ease,-webkit-transform .3s ease;-webkit-transition-delay: .2s;transition-delay: .2s;}
+.custom-modal-wrapper .custom-modal {background: #fff;border-radius: 3px;width: 90%;max-width: 620px;margin:0 15px;max-height: 92vh;height: auto;display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display: flex;-webkit-box-orient: vertical;-webkit-box-direction: normal;-webkit-flex-direction: column;-ms-flex-direction: column;flex-direction: column;position: relative;opacity: 0;-webkit-transform: scale3d(.9,.9,1);transform: scale3d(.9,.9,1);-webkit-transition: opacity .3s ease,-webkit-transform .3s ease;transition: opacity .3s ease,-webkit-transform .3s ease;transition: transform .3s ease,opacity .3s ease;transition: transform .3s ease,opacity .3s ease,-webkit-transform .3s ease;-webkit-transition-delay: .2s;transition-delay: .2s;}
 .custom-modal-wrapper.active .custom-modal {opacity: 1;-webkit-transform: scaleX(1);transform: scaleX(1);}
 .custom-modal-wrapper .custom-modal .c-modal-header {-webkit-flex-shrink: 0;-ms-flex-negative: 0;flex-shrink: 0;padding: 16px;display: -webkit-box;display: -webkit-flex;display: -ms-flexbox;display: flex;-webkit-box-align: center;-webkit-align-items: center;-ms-flex-align: center;align-items: center;-webkit-box-pack: justify;-webkit-justify-content: space-between;-ms-flex-pack: justify;justify-content: space-between;-webkit-transition: background .2s ease;transition: background .2s ease;border-bottom: 1px solid rgba(0,0,0,.08);border-radius: 3px 3px 0 0;}
 .custom-modal-wrapper .custom-modal .c-modal-header .close-popup button {font-size:0;border:0;height: 40px;width: 40px;background: url(../images/popup-close.svg) #2e3333;background-position: center center;background-size: 36px;border-radius:50%;position:absolute;top:-10px;right:-10px;outline: 0;}
@@ -566,10 +566,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 
 /* DATA TABLE */
-.data-table {width:100%; table-layout:fixed;}
+.table-wrapper {}
+.data-table {width:100%; table-layout:fixed; border:0;}
 .data-table thead {background:#f7f7f7;}
-.data-table th {padding:20px 25px; font-size:13px; font-weight:500;}
-.data-table td {padding: 8px 20px;font-size:12px;font-weight:400;vertical-align: middle;}
+.data-table th {padding:20px 25px; font-size:14px; font-weight:500;}
+.data-table td {padding: 12px 20px;font-size:13px;font-weight:400;vertical-align: middle;border-left:1px solid #eee;}
+.data-table td:last-child {border-right:1px solid #eee;}
+.data-table tr:last-child td {border-bottom:1px solid #eee;}
 .data-table .table-heading {display:none; }
 .data-table .icon-btn {color:#aaa;font-size: 16px;padding: 7px;width: 36px;height: 36px;display: inline-block;border-radius: 50%;text-align:center;}
 .data-table .icon-btn:hover {background:#f7f7f7;}
@@ -590,6 +593,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .checkout-wrapper-main .checkout-wrapper-grid .basket-box h2 { font-size: 22px; }
   .checkout-wrapper-main .checkout-wrapper-grid .basket-box .subtotal-area h5 { font-size: 16px; }
   .main-acoount-tabs .account-content { padding: 30px; }
+
+  .table-wrapper {overflow:auto;} 
 }
 
 @media (max-width: 992px) {
@@ -710,6 +715,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .button1 .btn, .button2 .btn { width: 100%; margin-top: 20px; }
   .popup-image { width: auto; }
   .credit-popup { width: auto; position: relative; border: 1px solid rgb(236, 236, 236); padding: 0px 10px; margin: 40px auto; }
+
+  .data-table {border:0 !important;}
+  .data-table thead {display:none;}
+  .data-table tr {display:block;width:100%;padding: 15px;margin:0 0 20px;border:1px solid #eee;}
+  .data-table tr td:last-child {text-align: center !important;justify-content: center;}
+  .data-table td {display:flex;width:100%;border:0;border-bottom: 1px solid #eee;padding: 15px 0;justify-content: space-between;}
+  .data-table tr td:last-child {border-bottom:0 !important; border-right:0 !important;}
+  .data-table .table-heading {display:block; width:50%; }
+
+  .hidden-tablet {display: none !important;}
 }
 
 
