--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -738,6 +738,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 @media (max-width: 768px) {
     .container { padding-left: 16px; padding-right: 16px;}
+
+    .main-menu .main-menu-content {min-width:220px;}
     
     .listing-wrapper {flex-direction: column;}
     .listing-wrapper .sidebar {width:100%;flex:0 0 100%;margin:0;padding-top: 22px;}
