--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -742,7 +742,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     .main-menu .main-menu-content {min-width:220px;}
     
     .listing-wrapper {flex-direction: column;}
-    .listing-wrapper .sidebar {width:100%;-webkit-flex: 0 0 100%;flex:0 0 100%;-ms-flex: 0 0 100%;max-width: 100%;margin:0;padding-top: 22px;}
+    .listing-wrapper .sidebar {width:100%;flex:0 0 100%;-webkit-flex: 1 1;-ms-flex: 0 0 100%;max-width: 100%;margin:0;padding-top: 22px;}
     footer .footer-wrapper .footer-topheading h2 { line-height: 30px; }
     #checkout-pupup.active .credit-popup-con { width: 100%; padding: 34px 25px; }
     .checkout-pupup .account-credit-btn .btn { width: 100%; display: block; }
